made a number of changes in an attempt to implement adding images using cloudinary and the supplied gitrepo - so far this is a disaster

--- a/assignment1-island-poi-webapp/.env
+++ b/assignment1-island-poi-webapp/.env
@@ -1,3 +1,7 @@
 cookie_name=island-poi-web
 cookie_password=secretpasswordnotrevealedtoanyone
 db=mongodb://localhost/islandpoi
+
+name=cdwitcompsci2020
+key=419137923548469
+secret=jynIi_6U3k79Qk1XUQXoRbM0YJc
