--- a/assignment1-island-poi-webapp/package.json
+++ b/assignment1-island-poi-webapp/package.json
@@ -18,7 +18,8 @@
     "@hapi/vision": "^6.0.1",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.6",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "cloudinary": "^1.25.0"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
