--- a/assignment1-island-poi-webapp/package.json
+++ b/assignment1-island-poi-webapp/package.json
@@ -16,10 +16,11 @@
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
+    "cloudinary": "^1.25.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.6",
-    "mongoose": "^5.11.15",
-    "cloudinary": "^1.25.0"
+    "mais-mongoose-seeder": "^1.0.7",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
