updating env and index to incorporate cloudatlas

--- a/assignment1-island-poi-webapp/.env
+++ b/assignment1-island-poi-webapp/.env
@@ -1,6 +1,7 @@
 cookie_name=island-poi-web
 cookie_password=secretpasswordnotrevealedtoanyone
-db=mongodb://localhost/islandpoi
+#db=mongodb://localhost/islandpoi
+db=mongodb+srv://poi:compsci2020@cluster0.rhZZZmAA4m.mongodb.net/poiAdmin?retryWrites=true&w=majority
 
 name=cdwitcompsci2020
 key=419137923548469
